--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
     "name": "fabiosan75/proyecto1",
     "description": "Estructura para organización de proyecto 1 bajo modelo CI-CD",
     "type": "project",
-    "license": "propietary",
+    "license": "proprietary",
+    "repositories": [
+        {"type":"vcs","url": "https://github.com/fabiosan75/libreria1"},
+        {"type":"vcs","url": "https://github.com/fabiosan75/libreria2"}
+    ],
     "autoload": {
         "psr-4": {
             "Fabiosan75\\Proyecto1\\": "src/"
@@ -15,5 +19,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": ">=7.4",
+        "fabiosan75/libreria1": "1.0.0",
+        "fabiosan75/libreria2": "1.0.0"
+    }
 }
